--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
     <div>
       <link href="./home.css" rel="stylesheet" />
-      <title>Notus Pro</title>
+      <title>EventHorizon</title>
       <meta property="og:title" content="Notus Pro" />
       <div class="home-container">
         <div class="home-hero">
